Tranlate complet + login api

--- a/Equip4/Equip4/LogIn/LogIn/LogIn/Views/PassarLlistaPage.xaml
+++ b/Equip4/Equip4/LogIn/LogIn/LogIn/Views/PassarLlistaPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:i18n="clr-namespace:LogIn.Helpers"
              x:Class="LogIn.Views.PassarLlistaPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="Passar Llista">
@@ -12,7 +13,7 @@
                 BackgroundColor="Silver"
                 HeightRequest="46"
                 Text="{Binding Filter, Mode=TwoWay}"
-                Placeholder="Buscar..."
+                Placeholder="{i18n:Translate Search}"
                 SearchCommand="{Binding SearchCommand}">
             </SearchBar>
             <Label
