--- a/Equip4/Equip4/LogIn/LogIn/LogIn/Views/LoginPage.xaml
+++ b/Equip4/Equip4/LogIn/LogIn/LogIn/Views/LoginPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:i18n="clr-namespace:LogIn.Helpers"
              x:Class="LogIn.Views.LoginPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="Login">
@@ -31,12 +32,12 @@
                         Grid.Column="1"
                         Keyboard="Email"
                         Text="{Binding Email, Mode=TwoWay}"
-                        Placeholder="enter your email...">
+                        Placeholder="{i18n:Translate EmailPlaceHolder}">
                     </Entry>
                     <Label
                         Grid.Row="1"
                         Grid.Column="0"
-                        Text="Password"
+                        Text="{i18n:Translate Password}"
                         VerticalOptions="Center">
                     </Label>
                     <Entry
@@ -44,7 +45,7 @@
                         Grid.Column="1"
                         IsPassword="true"
                         Text="{Binding Password, Mode=TwoWay}"
-                        Placeholder="enter your password...">
+                        Placeholder="{i18n:Translate PasswordPlaceHolder}">
                     </Entry>
                 </Grid>
                 <ActivityIndicator
@@ -57,7 +58,7 @@
                     VerticalOptions="CenterAndExpand">
                     <Label
                         HorizontalOptions="StartAndExpand"
-                        Text="Rememberme"
+                        Text="{i18n:Translate Rememberme}"
                         VerticalOptions="Center">
                     </Label>
                     <Switch
@@ -66,7 +67,7 @@
                 </StackLayout>
                 <Label
                     HorizontalOptions="Center"
-                    Text="Forgot your password?"
+                    Text="{i18n:Translate ForgotPassword}"
                     TextColor="Blue"
                     VerticalOptions="CenterAndExpand">
                 </Label>
@@ -81,17 +82,16 @@
                         HeightRequest="46"
                         HorizontalOptions="FillAndExpand"
                         IsEnabled="{Binding IsEnable, Mode=TwoWay}"
-                        Text="Login"
+                        Text="{i18n:Translate Login}"
                         TextColor="Green">
                     </Button>
                     <Button
                         BackgroundColor="Green"
                         BorderRadius="23"
-                        
                         HeightRequest="46"
                         HorizontalOptions="FillAndExpand"
                         IsEnabled="{Binding IsEnable, Mode=TwoWay}"
-                        Text="Register"
+                        Text="{i18n:Translate Register}"
                         TextColor="GreenYellow">
                     </Button>
                 </StackLayout>
