--- a/LogIn/LogIn/LogIn/Views/MenuPage.xaml
+++ b/LogIn/LogIn/LogIn/Views/MenuPage.xaml
@@ -6,9 +6,33 @@
              Title="Menu">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Menu"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <ListView 
+                    ItemsSource="{Binding Menus}"
+                    HasUnevenRows="True">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    <ColumnDefinition Width="*"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <Image 
+                                     Source="{Binding Icon}"
+                                     WidthRequest="50"
+                                     HeightRequest="50">
+                                </Image>
+                                <Label 
+                                     Grid.Column="1"
+                                     VerticalOptions="Center"
+                                     TextColor="Black"
+                                     Text="{Binding Title}">
+                                </Label>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
