Pagina registre fet
falta el post a la api

--- a/LogIn/LogIn/LogIn/App.xaml
+++ b/LogIn/LogIn/LogIn/App.xaml
@@ -8,6 +8,8 @@
 		<!-- Application resource dictionary -->
         <ResourceDictionary>
             <infra:InstanceLocator x:Key="Locator"/>
+
+            <x:String x:Key="APIe4">http://192.168.0.10</x:String>
         </ResourceDictionary>
 
 	</Application.Resources>
